# loresim

./: .gitignore  ChangeLog  README.md  bumpversion.sh  configure  configure.ac  simulate.sh
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  fastareformat.cpp  genseq.cpp  loresim.cpp
