ACLOCAL_AMFLAGS=-I m4

noinst_HEADERS=

MANPAGES = 

man_MANS = ${MANPAGES}

EXTRA_DIST = ${MANPAGES}

bin_PROGRAMS = loresim

loresim_SOURCES = loresim.cpp
loresim_LDADD = ${LIBMAUS2LIBS}
loresim_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
loresim_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
